--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,20 @@
   width: 100%;
 }
 
+.header {
+  background-image: linear-gradient(lightgrey, white);
+  width: 100%;
+  height: 4%;
+  border-bottom-style: solid;
+  border-bottom-width: 1px;
+  border-bottom-color: lightgrey;
+}
+
+.gallery {
+  width: 100%;
+  height: 96%;
+}
+
 .loading {
   position: absolute;
   display: block;
