--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,6 @@
 .app {
+  display: flex;
+  flex-flow: column;
   position: absolute;
   height: 100%;
   width: 100%;
@@ -7,23 +9,40 @@
 .header {
   background-image: linear-gradient(lightgrey, white);
   width: 100%;
-  height: 4%;
   border-bottom-style: solid;
   border-bottom-width: 1px;
   border-bottom-color: lightgrey;
 }
 
-.gallery {
+.list {
+  background-image: linear-gradient(to right, rgb(223, 229, 255) , rgb(255, 203, 61));
+  flex-grow: 1;
   width: 100%;
-  height: 96%;
 }
 
-.loading {
+.loader {
   position: absolute;
-  display: block;
+  top: 0;
   background-color: rgba(255,255,255,0.5);
   height: 100%;
   width: 100%;
+}
+
+.header input {
+  margin: 4px 2px;
+}
+
+.header .button {
+  background-color: white;
+  padding: 4px 12px;
+  border-style: solid;
+  border-width: 2px;
+  border-color: royalblue;
+  border-radius: 3px;
+  text-align: center;
+  
+  cursor: pointer;
+  float: right;
 }
 
 .error-page {
@@ -43,11 +62,13 @@
 }
 
 .list-element {
+  background-color: aliceblue;
+  font-size: 14px;
   margin-left: auto;
   margin-right: auto;
-  background:  grey;
-  border: 1px solid grey;
+  border: 2px solid lightblue;
   border-radius: 5px;
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
 
 img {
@@ -57,10 +78,23 @@ img {
   height: auto;
 }
 
-.img-text {
+.list-element span {
   display: block;
-  text-align: center;
   margin: 15px;
+  
+  text-align: center;
+}
+
+.list-element .title {
+  max-height: 36px;
+}
+
+.list-element .author {
+  max-height: 18px;
+}
+
+.list-element .uploaded {
+  max-height: 18px;
 }
 
 .lds-dual-ring {
